# surtch

./: Cargo.toml  README.md  backup.rs  filter.sh  play.sh  scr.sh  script.sh
src/: gui.rs  lib.rs  main.rs  results.rs  web_handler.rs
