[package]
name = "youtube_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
regex = { version = "1" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
