[package]
name = "surtch"
author = "SgoSkz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "*" }
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
clap = { version = "*" }
tui = { version = "*" }
